[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/godot_db_manager/table_property.gd" type="Script" id=2]

[node name="table_property" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -600.0
margin_bottom = -876.0
rect_min_size = Vector2( 1000, 24 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="align" type="HBoxContainer" parent="."]
margin_right = 1000.0
margin_bottom = 24.0
rect_min_size = Vector2( 1000, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="align"]
margin_top = 5.0
margin_right = 19.0
margin_bottom = 19.0
text = "ID:"

[node name="prop_id" type="LineEdit" parent="align"]
margin_left = 23.0
margin_right = 83.0
margin_bottom = 24.0
rect_min_size = Vector2( 60, 0 )
text = "999"
editable = false

[node name="Label2" type="Label" parent="align"]
margin_left = 87.0
margin_top = 5.0
margin_right = 129.0
margin_bottom = 19.0
text = "Name:"

[node name="prop_name" type="LineEdit" parent="align"]
margin_left = 133.0
margin_right = 433.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )

[node name="Label3" type="Label" parent="align"]
margin_left = 437.0
margin_top = 5.0
margin_right = 471.0
margin_bottom = 19.0
text = "Type:"

[node name="prop_type" type="OptionButton" parent="align"]
margin_left = 475.0
margin_right = 625.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )

[node name="close_button" type="Button" parent="align"]
margin_left = 629.0
margin_right = 649.0
margin_bottom = 24.0
text = "X"
